--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   uuid: ^4.3.3
   intl: ^0.19.0
+  sqflite: ^2.3.2
+  path: ^1.9.0
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
